Config - AllOWED_HOSTS

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SECRET_KEY=django-insecure-mvws^!(09^io4-09@y4@_38-i#)7n08z(ky9pw3ao9m6xg(^qm
 DEBUG=True
+ALLOWED_HOSTS=127.0.0.1, .localhost, .herokuapp.com
