--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,18 @@ defusedxml==0.7.1
 diff-match-patch==20200713
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==3.2.9
+Django==2.1.15
 django-import-export==2.6.1
+django-mssql-backend==2.8.1
+django-pyodbc-azure-2019==2.1.0.0
 et-xmlfile==1.1.0
+gunicorn==20.0.4
 MarkupPy==1.14
 numpy==1.21.4
 odfpy==1.4.1
 openpyxl==3.0.9
 pandas==1.3.4
+pyodbc==4.0.35
 python-dateutil==2.8.2
 python-decouple==3.5
 pytz==2021.3
@@ -19,6 +23,7 @@ six==1.16.0
 sqlparse==0.4.2
 static3==0.7.0
 tablib==3.1.0
+tzdata==2022.7
 Unidecode==1.3.2
 xlrd==2.0.1
 XlsxWriter==3.0.2
