--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ diff-match-patch==20200713
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==4.1.7
-django-import-export==2.6.1
-django-mssql-backend==2.8.1
-django-pyodbc-azure-2019==2.1.0.0
+django-import-export
+django-mssql-backend
+django-pyodbc-azure-2019
 et-xmlfile==1.1.0
 gunicorn==20.0.4
 MarkupPy==1.14
