--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ defusedxml==0.7.1
 diff-match-patch==20200713
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django==4.1.7
+Django
 django-import-export
 django-mssql-backend
 django-pyodbc-azure-2019
