--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,10 @@ defusedxml==0.7.1
 diff-match-patch==20200713
 dj-database-url==0.5.0
 dj-static==0.0.6
-Django ==2.2.0
+Django
+mssql-django==1.2
 django-import-export
-django-mssql-backend
 et-xmlfile==1.1.0
-gunicorn==20.0.4
 MarkupPy==1.14
 numpy==1.21.4
 odfpy==1.4.1
@@ -27,6 +26,7 @@ Unidecode==1.3.2
 xlrd==2.0.1
 XlsxWriter==3.0.2
 xlwt==1.3.0
+
 gunicorn==20.0.4
 psycopg2-binary==2.8.6
 
